fix firefox mediatheque images not showing

--- a/src/scss/components/_mediatheque.scss
+++ b/src/scss/components/_mediatheque.scss
@@ -16,6 +16,7 @@ $figure-size: calc(100% - #{$figure-spacing--sides} * 2);
     position: relative;
 
     width: $figure-size;
+    min-height: 11em;
     height: 0;
 
     margin: 0 $figure-spacing--sides $figure-spacing--bottom;
